# gerenciador-de-pastas

./: README.md  main.py  pyproject.toml  requirements.txt
