[project]
name = "gerenciador-de-pastas"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "altgraph==0.17.5",
    "customtkinter==5.2.2",
    "darkdetect==0.8.0",
    "packaging==26.0",
    "pefile==2024.8.26",
    "pillow==12.1.1",
    "pyinstaller==6.19.0",
    "pyinstaller-hooks-contrib==2026.3",
    "pywin32-ctypes==0.2.3",
    "setuptools==82.0.1",
]
